# Httpbin-Rs

./: Cargo.toml  README.md  req.http
src/: lib.rs  main.rs  routes.rs
src/common/: mod.rs  request_info.rs
src/handlers/: mod.rs  return_info_request.rs
