[package]
name = "httpbin-rs"
version = "0.1.0"
authors = ["Luca Allegro <luca.all1996@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.0.0-beta.1"
actix-service = "1.0.0"
actix-rt = "1.1.1"
actix-multipart = "0.3.0-beta.1"
bytes = "0.5.2"
futures = "0.3.1"
env_logger = "0.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12.*"
qstring = "0.7.2"